--- a/css/styles.css
+++ b/css/styles.css
@@ -88,6 +88,13 @@ footer {
     display: flex;
 }
 
+.h234 {
+  color: black;
+  text-align: center;
+  margin-top: 100px;
+  font-size: 30px
+}
+
 .main-about > div {
   flex: 1;
 }
