--- a/css/styles.css
+++ b/css/styles.css
@@ -91,3 +91,10 @@ footer {
 .main-about > div {
   flex: 1;
 }
+
+.h234 {
+  color: black;
+  text-align: center;
+  margin-top: 100px;
+  font-size: 30px
+}
